src/test/ui/invalid/invalid-crate-type.stderr
error: invalid `crate_type` value
  --> $DIR/invalid-crate-type.rs:3:15
   |
LL | #![crate_type="foo"] //~ ERROR invalid `crate_type` value
   |               ^^^^^
   |
   = note: #[deny(unknown_crate_types)] on by default

error: invalid `crate_type` value
  --> $DIR/invalid-crate-type.rs:7:15
   |
LL | #![crate_type="statoclib"]
   |               ^^^^^^^^^^^ help: did you mean: `"staticlib"`

error: invalid `crate_type` value
  --> $DIR/invalid-crate-type.rs:12:15
   |
LL | #![crate_type="procmacro"]
   |               ^^^^^^^^^^^ help: did you mean: `"proc-macro"`

error: invalid `crate_type` value
  --> $DIR/invalid-crate-type.rs:17:15
   |
LL | #![crate_type="static-lib"]
   |               ^^^^^^^^^^^^ help: did you mean: `"staticlib"`

error: invalid `crate_type` value
  --> $DIR/invalid-crate-type.rs:22:15
   |
LL | #![crate_type="drylib"]
   |               ^^^^^^^^ help: did you mean: `"dylib"`

error: invalid `crate_type` value
  --> $DIR/invalid-crate-type.rs:27:15
   |
LL | #![crate_type="dlib"]
   |               ^^^^^^ help: did you mean: `"rlib"`

error: invalid `crate_type` value
  --> $DIR/invalid-crate-type.rs:32:15
   |
LL | #![crate_type="lob"]
   |               ^^^^^ help: did you mean: `"lib"`

error: invalid `crate_type` value
  --> $DIR/invalid-crate-type.rs:37:15
   |
LL | #![crate_type="bon"]
   |               ^^^^^ help: did you mean: `"bin"`

error: invalid `crate_type` value
  --> $DIR/invalid-crate-type.rs:42:15
   |
LL | #![crate_type="cdalib"]
   |               ^^^^^^^^ help: did you mean: `"cdylib"`

error: aborting due to 9 previous errors

